# project-12

./: .env.example  .gitignore  Okeanos_AI_Platform_PRD.md  Procfile  README.md  agent.md  agent.zh-CN.md  alembic.ini  main.py  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260303_0001_init.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: approvals.py  audiences.py  budgets.py  campaigns.py  connectors.py  health.py  leads.py  messaging.py  reports.py  webhooks.py
app/api/v1/schemas/: approvals.py  audiences.py  budgets.py  campaigns.py  connectors.py  leads.py  messaging.py  reports.py
app/core/: logging.py  settings.py
app/db/: session.py
app/db/models/: __init__.py  approval.py  audience.py  budget.py  campaign.py  lead.py  messaging.py  reporting.py
app/modules/common/: audit.py
app/modules/messaging/: policy.py
app/modules/reporting/: service.py
app/worker/: celery_app.py  tasks.py
docs/: architecture.md  execution_plan.md  failure_drills.md  go_live_checklist.md  local_run_validation.md  release_notes.md  runbook.md  tech_design.md
scripts/: smoke_load.py
sql/: 001_p0_schema.sql
tests/: test_health.py  test_messaging_policy.py  test_reporting_service.py
